# shasta

./: .gitignore  .gitmodules  LICENSE  README.md  bash.md  dash-bash-diffs.md  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml  tutorial_test.yml
shasta/: ast_node.py  ast_walker.py  bash_to_shasta_ast.py  flags.py  gosh_to_shasta_ast.py  json_to_ast.py  print_lib.py  subst.py
test/: test.py
tests/: LICENSE  Makefile  gosh_rt.py  rt.py  setup_test.sh
tests/bash_tests/: test.py
tests/bash_tests/test_files/: README
tests/tutorial_tests/: solution.py  test_popl26_tutorial.py  utils.py
tests/tutorial_tests/sh/: effectful.sh  simple.sh  subshells.sh
